--- a/Practicas/Practica02/Practica02.csproj
+++ b/Practicas/Practica02/Practica02.csproj
@@ -56,6 +56,12 @@
     <Compile Include="ComPorPromedio.cs" />
     <Compile Include="Conjunto.cs" />
     <Compile Include="EstrategiaDeComparacion.cs" />
+    <Compile Include="Iterable.cs" />
+    <Compile Include="Iterador.cs" />
+    <Compile Include="IteradorCola.cs" />
+    <Compile Include="IteradorColeccionMultiple.cs" />
+    <Compile Include="IteradorConjunto.cs" />
+    <Compile Include="IteradorPila.cs" />
     <Compile Include="Numero.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Pila.cs" />
