Terminacion del Tp 03

--- a/Practicas/Practica03/Practica03.csproj
+++ b/Practicas/Practica03/Practica03.csproj
@@ -67,6 +67,8 @@
     <Compile Include="LectorDeDatos.cs" />
     <Compile Include="MyClass.cs" />
     <Compile Include="Numero.cs" />
+    <Compile Include="Observado.cs" />
+    <Compile Include="Observador.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Pila.cs" />
     <Compile Include="Profesor.cs" />
