Realizacion de la practica 05

--- a/Practicas/Practica05/Practica05.csproj
+++ b/Practicas/Practica05/Practica05.csproj
@@ -67,6 +67,7 @@
     <Compile Include="EstrategiaDeComparacion.cs" />
     <Compile Include="FabricaDeAlumnoEstudioso.cs" />
     <Compile Include="FabricaDeAlumnos.cs" />
+    <Compile Include="FabricaDeAlumnosProxy.cs" />
     <Compile Include="FabricaDeComparables.cs" />
     <Compile Include="FabricaDeDecorados.cs" />
     <Compile Include="FabricaDeNumeros.cs" />
